tests/baselines/reference/interfacedeclWithPredicatesError7.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError7.ts(2,11): error TS95003: The field unknown is used in a predicate but not described in the interface


==== tests/cases/compiler/interfacedeclWithPredicatesError7.ts (1 errors) ====
    
    interface UsersShow{
              ~~~~~~~~~
!!! error TS95003: The field unknown is used in a predicate but not described in the interface
        user_id?: number;
        screen_name?: string;
        text?: string;
    } with {
        present(unknown);
    }
    